Filtrando chaves e o valor pelo tipo